# something-like-balloon-editor

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE.txt  MANUAL.md  README.md  ThirdPartyNotices.txt  build.rs  build_release.ps1
resource/assets/: files.txt
resource/assets/something_like_balloon/: descript.txt  files.txt
resource/sample_balloon/: descript.txt  install.txt  readme.txt
resource/sample_balloon/profile/slbe/: files.txt
src/: main.rs
src/core/: color.rs  composer.rs  descript.rs  gdi_text.rs  layout.rs  mod.rs  preview.rs  profile.rs  project.rs
src/gui/: app.rs  field_def.rs  loader.rs  mod.rs  state.rs
src/gui/panels/: balloon_list.rs  files_editor.rs  menubar.rs  mod.rs  preview.rs  settings.rs  toolbar.rs
