[package]
name = "balloon_editor"
version = "0.9.1"
edition = "2024"

[dependencies]
image = "0.25"
png = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
anyhow = "1"
eframe = { version = "0.29", features = ["default"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
open = "5"
rfd = "0.15"
trash = "5"
fontdue = "0.9"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
winres = "0.1"

[dev-dependencies]
